# rust-memcache

./: Cargo.toml
src/: client.rs  connection.rs  lib.rs  value.rs
src/protocol/: ascii.rs  binary.rs  binary_packet.rs  mod.rs
src/stream/: udp_stream.rs
tests/: test_ascii.rs  tests.rs
