[package]
name = "memcache"
version = "0.18.0"
authors = ["AN Long <aisk1988@gmail.com>"]
repository = "https://github.com/aisk/rust-memcache"
readme = "README.md"
license = "MIT"
description = "memcached client for rust"
keywords = ["memcache", "memcached", "driver", "cache", "database"]
edition = "2018"

[features]
default = ["tls"]
tls = ["openssl"]
clippy = []

[dependencies]
byteorder = "1.5.0"
url = "2.5.3"
rand = "0.8.5"
enum_dispatch = "0.3.13"
openssl = { version = "0.10.68", optional = true }
r2d2 = "0.8.10"
